homework/devops-kubernetes-master/module-7/Homework/task2/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: billing
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              service:
                name: billing
                port:
                  number: 8080
